Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85275

x of setGeometry() cannot be more than 16383

    XMLWordPrintable

Details

    • Linux/X11
    • b92a41ea218d3ae73e9c8afa5a795e4893c68951 (qt/qtbase/dev) be9d4ad506c9edd16bb891bcc8e20a6308326e76 (qt/qtbase/5.15)

    Description

      This limitation seems to come from #define XCOORD_MAX 16383 in
      https://code.qt.io/cgit/qt/qtbase.git/tree/src/plugins/platforms/xcb/qxcbwindow.cpp#n87

      Can XCOORD_MAX be something bigger?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes