xcb: increase XCOORD_MAX to 32767

Align with int16_t in xcb_create_window() and xcb_get_geometry_reply_t.

Fixes: QTBUG-85275
Change-Id: Ibbc0fab6b3d725a96ac4545857a4f04b026c4175
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit b92a41ea218d3ae73e9c8afa5a795e4893c68951)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>